# AI-Engineer-Take-Home

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: answer_question.py  db.py  documents.py  main.py  seed.py  summarize_note.py
src/clients/: openai.py  qdrant.py  redis.py
