[project]
name = "ai-engineer-take-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "alembic>=1.15.2",
    "backoff>=2.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "openai>=1.78.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "qdrant-client>=1.14.2",
    "redis>=6.0.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
